--- a/css/boardGame.css
+++ b/css/boardGame.css
@@ -1,287 +1,33 @@
 /*----------- Reset------------- */
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 @media only screen and (max-width: 431px) {
+  body {
+    background-color: black;
+  }
 
-    body{
-        background-color: black;
-    }
-
-
-    .rotate {
-        transform: rotateY(180deg);
-      }
-
-    .cloudResult .cloudGame {
-        padding-top: 1rem;
-      }
-
-    /* READY DISPLAY */
-
-    /* buton ready*/
-    .ready-btn {
-        animation: playShadow 1.6s ease-out infinite;
-        display: flex;
-        cursor: pointer;
-        text-decoration: none;
-        width: 10%;
-
-      }
-
-      .ready-btn::after {
-        border-radius: 50%;
-        z-index: -1;
-        pointer-events: none;
-        transition: 0.35s;
-      }
-      @keyframes playShadow {
-        35% {
-          transform: scale(1.08);
-        }
-        76% {
-          transform: scale(0.96);
-        }
-      }
-
-    .readyDisplay{
-        display: flex;
-        justify-content:center;
-        align-items: center;
-        flex-direction: column;
-        margin: 2rem;
-        height: 80vh;
-        padding: 3rem;
-        background-image: url('https://res.cloudinary.com/dcwt8jbja/image/upload/v1684268314/random/bk-blue-mobil_if9clv.svg');
-        background-position: center;
-        background-size: cover;
-        border-radius: 20px;
-    }
-
-    .boardGame .readyDisplay h2 {
-        font-family: 'Bangers', sans-serif;
-        color:#ffce55;
-        text-shadow: 3px 3px#222;
-        font-size: 2rem;
-    }
-
-    #play-txt {
-        font-size: 3rem;
-        position: relative;
-    }
-
-    .cloudResult {
-        position: relative;
-    }
-
-    .readyDisplay .cloudResult p {
-        width: 40%;
-
-    }
-    .cloudResult p {
-        position: absolute;
-        padding-top: 1rem;
-        transform: translate(-50%, -50%);
-        font-size: 1rem;
-        text-align: center;
-        width: 63%;
-    }
-
-
-    .ready-btn {
-        background: none;
-        border: none;
-        cursor: pointer;
-        margin-bottom: 3rem;
-        position: relative;
-    }
-
-
-    /* CHALLENGE DISPLAY */
-     .challengeDisplay{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        position: relative;
-        margin: 2rem ;
-        max-width: 1440px;
-        height: 80vh;
-        padding: 3rem;
-        position: relative;
-        background-image: url('https://res.cloudinary.com/dcwt8jbja/image/upload/v1684268314/random/bk-blue-mobil_if9clv.svg');
-        background-position: center;
-        background-size: cover;
-        border-radius: 20px;
-    }
-
-    .cloudResult{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-    }
-    .cloudResult p {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        font-size: 1.1rem;
-        text-align: center;
-    }
-
-    .game-btn{
-        display: flex;
-
-        align-items: center;
-        flex-direction: row;
-        gap:4rem;
-    }
-
-    /* TIMER */
-    .timerGame{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        gap: 3rem;
-
-    }
-
-    .timer{
-        text-align:center;
-        font-family:Bangers;
-        color:#222;
-        font-size:2rem;
-        letter-spacing:2px;
-        animation: wiggle 1s infinite;
-        padding: .5rem 3rem;
-        margin-right: 1rem;
-        border-radius: 5px;
-    }
-
-    .timer:hover {
-        animation: none;}
-
-    .startTimer button {
-        text-align:center;
-        font-family:Bangers;
-        color:rgb(0, 0, 0);
-        font-size:35px;
-        border-radius: 10px;
-        margin-top: 2rem;
-    } 
-
-
-
-    @keyframes wiggle {
-        0% { transform: rotate(0deg); }
-    25% { transform: rotate(3deg); }
-    50% { transform: rotate(0deg); }
-    75% { transform: rotate(-3deg); }
-    100% { transform: rotate(0deg); }
-    }
-}
-
-
-/* Gameplay buttons styling - Mobile*/
-
-.game-btn button, #startTimer {
-    width: 35%;
-    font-family: "happy monkey";
-    font-weight: 500;
-    letter-spacing: 1px;
-    transition: all 0.3s ease;
-    position: relative;
-    display: inline-block;
-    outline: none;
-    border-radius: 3px;
-    z-index: 0;
-    background: #fff;
-    overflow: hidden;
-    border: 1px solid black;
-    color: black;
-
-    padding: .3rem 0;
-}
-.game-btn{
-    width: 100%;
-}
-
-#startTimer {
-    width: 8rem;
-    padding: .5rem 0;
-    background-color: #9dc705;
-    color: #000;
-    border:1px solid #000;
-}
-#startTimer:hover {
-    background-color: #fff;
-    color:#9dc705;
-    border:1px solid #9dc705;
-}
-
-#finish-btn{
-    color: #000;
-    border:1px solid #000;
-    background-color: #f3655d;
-}
-#finish-btn:hover{
-    background-color: #fff;
-    color:#f3655d;
-    border: #f3655d solid 1px;
-}
-
-
-#next-btn {
-    color: #000;
-    border:1px solid #000;
-    background-color: #51cbf1;
-}
-#next-btn:hover {
-    background-color: #fff;
-    color: #51cbf1;
-    border: #51cbf1 1px solid;
-}
-
-
-
-/* Gameplay buttons - Desktop Styling */
-
-@media only screen and (min-width: 431px) {
-
-    body{
-        background-color: black;
-    }
-
-
-
-.rotate {
+  .rotate {
     transform: rotateY(180deg);
   }
 
-.cloudGame{
-height: 32em;
+ 
 
-    z-index: 0;
-}
+  /* READY DISPLAY */
 
-/* .cloudResult .cloudGame {
-    padding-top: 1rem;
-  } */
-
-/* READY DISPLAY */
-
-/* buton ready*/
-.ready-btn {
-    animation: playShadow 1.6s ease infinite;
+  /* buton ready*/
+  .ready-btn {
+    animation: playShadow 1.6s ease-out infinite;
     display: flex;
     cursor: pointer;
     text-decoration: none;
-
+    background: none;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 3rem;
   }
 
   .ready-btn::after {
@@ -299,44 +45,285 @@ height: 32em;
     }
   }
 
-.readyDisplay{
+  .readyDisplay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 2rem;
+
+    padding: 3rem;
+    background-image: url("https://res.cloudinary.com/dcwt8jbja/image/upload/v1684268314/random/bk-blue-mobil_if9clv.svg");
+    background-position: center;
+    background-size: cover;
+    border-radius: 20px;
+  }
+
+  .boardGame .readyDisplay h2 {
+    font-family: "Bangers", sans-serif;
+    color: #ffce55;
+    text-shadow: 3px 3px#222;
+    font-size: 2rem;
+  }
+
+  #play-txt {
+    font-size: 3rem;
+    position: relative;
+  }
+
+  .cloudResult {
+    position: relative;
+  }
+
+  .readyDisplay .cloudResult p {
+    width: 40%;
+  }
+  .cloudResult p {
+    position: absolute;
+    padding-top: 1rem;
+    transform: translate(-50%, -50%);
+    font-size: 1rem;
+    text-align: center;
+    width: 63%;
+  }
+
+  /* CHALLENGE DISPLAY */
+  .challengeDisplay {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative;
+    margin: 2rem;
+    max-width: 1440px;
+
+    padding: 3rem;
+    position: relative;
+    background-image: url("https://res.cloudinary.com/dcwt8jbja/image/upload/v1684268314/random/bk-blue-mobil_if9clv.svg");
+    background-position: center;
+    background-size: cover;
+    border-radius: 20px;
+  }
+
+  .cloudResult {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+  .cloudResult p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.1rem;
+    text-align: center;
+    padding: 2%;
+  }
+
+  .game-btn {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 4rem;
+    margin: 0 0 3rem 0;
+  }
+
+  /* TIMER */
+  .timerGame {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .timer {
+    text-align: center;
+    font-family: Bangers;
+    color: #222;
+    font-size: 2rem;
+    letter-spacing: 2px;
+    animation: wiggle 1s infinite;
+    padding: 0.5rem 3rem;
+    margin-right: 1rem;
+    border-radius: 5px;
+  }
+
+  .timer:hover {
+    animation: none;
+  }
+
+  .startTimer button {
+    text-align: center;
+    font-family: Bangers;
+    color: rgb(0, 0, 0);
+    font-size: 35px;
+    border-radius: 10px;
+    margin-top: 2rem;
+  }
+
+  @keyframes wiggle {
+    0% {
+      transform: rotate(0deg);
+    }
+    25% {
+      transform: rotate(3deg);
+    }
+    50% {
+      transform: rotate(0deg);
+    }
+    75% {
+      transform: rotate(-3deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
+  }
+}
+
+/* Gameplay buttons styling - Mobile*/
+
+.game-btn button,
+#startTimer {
+  width: 35%;
+  font-family: "happy monkey";
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  outline: none;
+  border-radius: 3px;
+  z-index: 0;
+  background: #fff;
+  overflow: hidden;
+  border: 1px solid black;
+  color: black;
+
+  padding: 0.3rem 0;
+}
+.game-btn {
+  width: 100%;
+}
+
+#startTimer {
+  width: 8rem;
+  padding: 0.5rem 0;
+  background-color: #9dc705;
+  color: #000;
+  border: 1px solid #000;
+}
+#startTimer:hover {
+  background-color: #fff;
+  color: #9dc705;
+  border: 1px solid #9dc705;
+}
+
+#finish-btn {
+  color: #000;
+  border: 1px solid #000;
+  background-color: #f3655d;
+}
+#finish-btn:hover {
+  background-color: #fff;
+  color: #f3655d;
+  border: #f3655d solid 1px;
+}
+
+#next-btn {
+  color: #000;
+  border: 1px solid #000;
+  background-color: #51cbf1;
+}
+#next-btn:hover {
+  background-color: #fff;
+  color: #51cbf1;
+  border: #51cbf1 1px solid;
+}
+
+/* Gameplay buttons - Desktop Styling */
+
+@media only screen and (min-width: 431px) {
+  body {
+    background-color: black;
+  }
+
+  .rotate {
+    transform: rotateY(180deg);
+  }
+
+  .cloudGame {
+    height: 32em;
+
+    z-index: 0;
+  }
+
+  /* .cloudResult .cloudGame {
+    padding-top: 1rem;
+  } */
+
+  /* READY DISPLAY */
+
+  /* buton ready*/
+  .ready-btn {
+    animation: playShadow 1.6s ease infinite;
+    display: flex;
+    cursor: pointer;
+    text-decoration: none;
+  }
+
+  .ready-btn::after {
+    border-radius: 50%;
+    z-index: -1;
+    pointer-events: none;
+    transition: 0.35s;
+  }
+  @keyframes playShadow {
+    35% {
+      transform: scale(1.08);
+    }
+    76% {
+      transform: scale(0.96);
+    }
+  }
+
+  .readyDisplay {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     margin: 2rem;
     padding: 3rem;
-    background-image: url('https://res.cloudinary.com/dcwt8jbja/image/upload/v1684306691/random/backgroundblue_6_aexony.svg');
+    background-image: url("https://res.cloudinary.com/dcwt8jbja/image/upload/v1684306691/random/backgroundblue_6_aexony.svg");
     background-position: center;
     background-size: cover;
     border-radius: 50px;
-}
+  }
 
-.boardGame .readyDisplay h2 {
-    font-family: 'Bangers', sans-serif;
-    color:#ffce55;
+  .boardGame .readyDisplay h2 {
+    font-family: "Bangers", sans-serif;
+    color: #ffce55;
     text-shadow: 3px 3px#222;
     font-size: 3rem;
     display: flex;
     align-items: flex-end;
     gap: 0.5rem;
     margin: 0 0;
-}
+  }
 
-#play-txt {
+  #play-txt {
     font-size: 3.5rem;
     position: relative;
-}
+  }
 
-.cloudResult {
+  .cloudResult {
     position: relative;
-}
+  }
 
-.readyDisplay .cloudResult p {
+  .readyDisplay .cloudResult p {
     width: 40%;
-
-
-}
-.cloudResult p {
+  }
+  .cloudResult p {
     position: absolute;
     transform: translate(-50%, -50%);
     font-size: 15rem;
@@ -344,14 +331,12 @@ height: 32em;
     width: 30%;
     z-index: 5;
     letter-spacing: 0.141em;
-
-}
-.cloudResult span{
+  }
+  .cloudResult span {
     font-family: bangers;
-}
+  }
 
-
-.ready-btn {
+  .ready-btn {
     display: flex;
     background: none;
     border: none;
@@ -359,108 +344,112 @@ height: 32em;
     width: 20%;
     display: inline;
     align-self: last baseline;
-}
+  }
 
-
-/* CHALLENGE DISPLAY */
- .challengeDisplay{
+  /* CHALLENGE DISPLAY */
+  .challengeDisplay {
     display: flex;
     flex-direction: column;
 
     position: relative;
-    margin: 2rem ;
-
+    margin: 2rem;
 
     padding: 3rem;
     position: relative;
-    background-image: url('https://res.cloudinary.com/dcwt8jbja/image/upload/v1684306691/random/backgroundblue_6_aexony.svg');
+    background-image: url("https://res.cloudinary.com/dcwt8jbja/image/upload/v1684306691/random/backgroundblue_6_aexony.svg");
     background-position: center;
     background-size: cover;
     border-radius: 50px;
-}
+  }
 
-.cloudResult{
+  .cloudResult {
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-}
-.cloudResult p {
+  }
+  .cloudResult p {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 1.1rem;
     text-align: center;
-}
+    padding: 2%;
+  }
 
-.game-btn{
+  .game-btn {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    gap:30rem;
+    gap: 30rem;
     z-index: 6;
-}
+  }
 
-/* TIMER */
-.timerGame{
+  /* TIMER */
+  .timerGame {
     display: flex;
     justify-content: center;
     align-items: flex-end;
     flex-direction: column;
     top: 4rem;
     gap: 1rem;
-}
+  }
 
-.timer{
-    text-align:center;
-    font-family:Bangers;
-    color:#222;
-    font-size:2rem;
-    letter-spacing:2px;
+  .timer {
+    text-align: center;
+    font-family: Bangers;
+    color: #222;
+    font-size: 2rem;
+    letter-spacing: 2px;
     animation: wiggle 1s infinite;
-    padding: .5rem 3rem;
+    padding: 0.5rem 3rem;
     margin-right: 1rem;
     border-radius: 5px;
-}
+  }
 
-.timer:hover {
-    animation: none;}
+  .timer:hover {
+    animation: none;
+  }
 
+  @keyframes wiggle {
+    0% {
+      transform: rotate(0deg);
+    }
+    25% {
+      transform: rotate(3deg);
+    }
+    50% {
+      transform: rotate(0deg);
+    }
+    75% {
+      transform: rotate(-3deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
+  }
 
+  /* Gameplay buttons styling - Desktop*/
 
-
-
-@keyframes wiggle {
-    0% { transform: rotate(0deg); }
-25% { transform: rotate(3deg); }
-50% { transform: rotate(0deg); }
-75% { transform: rotate(-3deg); }
-100% { transform: rotate(0deg); }
-}
-
-
-
-/* Gameplay buttons styling - Desktop*/
-
-.game-btn button, #startTimer {
-width: 20%;
-font-family: "happy monkey";
-font-weight: 500;
-letter-spacing: 3px;
-transition: all 0.3s ease;
-border-radius: 50px;
-border: 1px solid black;
-color: black;
-height: 40px;
-font-size: 1.3rem;
-padding: 0;
-margin: 0 0.4em;
-}
-#startTimer{
+  .game-btn button,
+  #startTimer {
+    width: 20%;
+    font-family: "happy monkey";
+    font-weight: 500;
+    letter-spacing: 3px;
+    transition: all 0.3s ease;
+    border-radius: 50px;
+    border: 1px solid black;
+    color: black;
+    height: 40px;
+    font-size: 1.3rem;
+    padding: 0;
+    margin: 0 0.4em;
+  }
+  #startTimer {
     width: 20%;
     font-size: 1.3;
-
-}
+  }
 }
