--- a/css/footer.css
+++ b/css/footer.css
@@ -6,8 +6,7 @@
         padding: 0px;
         box-sizing: border-box;
     }
-
-
+@media (max-width : 431px){
     footer {
         width: 100%;
         font-family: 'Happy monkey', sans-serif;
@@ -47,5 +46,41 @@
         width: 100%;
         height: 3rem;
     }
+}
+@media (min-width: 431px){
 
+
+    footer {
+        width: 100%;
+    }
+
+    .social-media {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+    }
+
+    .foot-container {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        height: 5em;
+        background-color: #484848;
+        color: #ffff;
+        font-size: 1rem;
+    }
+
+    .fab {
+    color: #FFFFFF;
+    }
+
+    .foot-container p {
+        color: white;
+    }
+
+    .copyright {
+        background-color:#0000;
+
+    }
+}
 
